<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

    <!-- First Row -->
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >
        <LinearLayout android:layout_width="180dp" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:layout_marginEnd="8dp"/>
            <EditText
                    android:id="@+id/firstName"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/first_name_edit"
                    android:inputType="textPersonName" android:background="@color/gray"/>
        </LinearLayout>
        <LinearLayout android:layout_width="180dp" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/last_name"
                    android:layout_marginStart="8dp"/>
            <EditText
                    android:id="@+id/lastName"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/last_name_edit"
                    android:inputType="textPersonName" android:background="@color/gray"/>
        </LinearLayout>

    </LinearLayout>
    <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal"
    >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/gender"/>
        <RadioButton android:id="@+id/gender_male" android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:text="@string/male"/>
        <RadioButton android:id="@+id/gender_female" android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:text="@string/female"/>

    </RadioGroup>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/birthday"
              android:paddingTop="10dp"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="61dp"
                  android:orientation="horizontal">

        <TextView android:id="@+id/birthday_text"
                  android:layout_width="280dp"
                  android:layout_height="wrap_content"
                  tools:text="Birthday" android:background="@color/gray" android:textSize="20sp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/birthday_button"
                android:text="@string/select_date"
                android:layout_marginStart="10dp" android:backgroundTint="@color/gray" android:textColor="@color/black"/>
    </LinearLayout>


    <!-- Fourth Row - Address -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" android:paddingTop="5dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/address_edit"
            android:inputType="text" android:background="@color/gray"/>

    <!-- Fifth Row - Email -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" android:layout_marginTop="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_edit" android:background="@color/gray"/>

    <!-- Sixth Row - Terms of Use -->
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use_checkbox"/>

    <!-- Register Button -->
    <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register" android:layout_marginTop="10dp"/>

</LinearLayout>